# RobotDevKit

./: README.md  meson.build
modules/core/: meson.build
modules/core/include/rdk/core/motor/damiao/: damiao_controller.h
modules/core/include/rdk/core/motor/dji/: c6xx_controller.h
modules/core/src/motor/damiao/: damiao_controller.cpp
